--- a/3-terrarium/solution/index.html
+++ b/3-terrarium/solution/index.html
@@ -13,7 +13,7 @@
 
 	<body>
 		<div id="page">
-			<h1>My Terrarium</h1>
+			<h1>Aloha! Here is my Terrarium</h1>
 
 			<div id="left-container" class="container">
 				<div class="plant-holder">
